--- a/app/src/main/res/layout/zakat_poriciti.xml
+++ b/app/src/main/res/layout/zakat_poriciti.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ZakatPoriciti"
-    android:background="#ffffff"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     >
 
@@ -30,14 +30,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:layout_height="match_parent"
+        android:background="@drawable/red_button"
+
 
         >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
 
 
@@ -46,7 +47,7 @@
             <LinearLayout
                 android:id="@+id/zakat1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
 
                 >
