--- a/app/src/main/res/drawable/circle_transparent.xml
+++ b/app/src/main/res/drawable/circle_transparent.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="rectangle">
 
     <solid
         android:color="@android:color/transparent"
         />
 
     <stroke
-        android:color="#FFC107"
-        android:width="5dp"
+        android:color="#030303"
+        android:width="1sp"
         />
 
     <size
-        android:width="120dp"
-        android:height="120dp"
+        android:width="20dp"
+        android:height="20dp"
         />
 </shape>
