--- a/app/src/main/res/drawable/red_button.xml
+++ b/app/src/main/res/drawable/red_button.xml
@@ -4,8 +4,8 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="#FFFFFF" />
-            <corners android:radius="0dp" />
+            <solid android:color="#00FFFFFF" />
+            <corners android:radius="20dp" />
         </shape>
     </item>
     
@@ -18,15 +18,15 @@
         
         
         <shape android:shape="rectangle" >
-            <solid android:color="#E6d71e18"
+            <solid android:color="#E6FFFFFF"
                 />
-            <corners android:radius="4dp" />
+            <corners android:radius="20dp" />
         </shape>
         
         <shape android:shape="rectangle"  >
              <corners android:radius="3dip" />
              <stroke android:width="0dip" 
-                 android:color="#5E000000" />
+                 android:color="#00736B6B" />
                  
                     
          </shape>
