--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFF2C8"
     android:orientation="vertical"
-    tools:context=".ZakatQandA">
+    tools:context=".AboutUs">
 
 
 
