--- a/app/src/main/res/layout/zakat_calculator.xml
+++ b/app/src/main/res/layout/zakat_calculator.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFECAF"
+    android:background="#FFF2C8"
     android:orientation="vertical"
     tools:context=".ZakatCalculator">
 
@@ -21,5 +21,269 @@
 
         />
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/red_button"
+        android:layout_margin="7dp"
+
+
+        >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="সম্পদ"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_margin="10dp"
+                android:textSize="25dp"
+                android:gravity="center"
+
+            />
+
+                // +++++++++++++++++++++++++++++++++
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="স্বর্ণের মূল্য :"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <EditText
+
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="এখানে লিখুন..."
+                    android:textColorHint="#84000000"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:inputType="numberDecimal"
+
+                    />
+                // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="রূপার মূল্য :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+
+            />
+        // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="নগদ টাকা/ব্যাংক একাউন্টে জমাকৃত টাকা :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="7dp"
+
+            />
+        // ++++++++++++++++++++++++++++++++++
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ব্যবসায়িক সম্পদ"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            android:textSize="22sp"
+            android:gravity="center"
+
+            />
+        // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="ব্যবসার বিক্রয়যোগ্য পণ্য :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="7dp"
+
+            />
+        // +++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="ব্যবসার উদ্দেশ্যে ক্রয়কৃত ফ্ল্যাট, বাড়ি :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="7dp"
+
+            />
+        // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="যাকাতের সম্পদ থেকে বিয়োগযোগ্য ঋণ"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            android:textSize="21sp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="7dp"
+
+            />
+
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="সকল ঋণ :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="7dp"
+
+            />
+        // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="কর্মচারীর বকেয়া বেতন-ভাতা :"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+
+            android:textColorHint="#84000000"
+            android:textColor="#000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="এখানে লিখুন..."
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="numberDecimal"
+            android:layout_marginBottom="7dp"
+
+            />
+        // +++++++++++++++++++++++++++++++++++++
+        // +++++++++++++++++++++++++++++++++
+        <Button
+            android:id="@+id/btSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="হিসাব করুন"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+           android:backgroundTint="#FFFFF2C8"
+
+            />
+
+        // +++++++++++++++++++++++++++++++++++++
+
+
+    </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
