--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1,35 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true">
-        <layer-list>
-            <item>
-                <shape android:shape="rectangle">
-                    <stroke android:width="2dp" android:color="@color/components_colorPrimaryDark" />
-                    <solid android:color="@color/components_white" />
-                </shape>
-            </item>
-
-            <item android:bottom="2dp">
-                <shape android:shape="rectangle">
-                    <solid android:color="@color/components_white" />
-                </shape>
-            </item>
-        </layer-list>
-    </item>
-    <item android:state_focused="false">
-        <layer-list>
-            <item>
-                <shape android:shape="rectangle">
-                    <stroke android:width="1dp" android:color="@color/components_colorAccent" />
-                    <solid android:color="@color/components_white" />
-                </shape>
-            </item>
-
-            <item android:bottom="1dp">
-                <shape android:shape="rectangle">
-                    <solid android:color="@color/components_white" />
-                </shape>
-            </item>
-        </layer-list>
-    </item>
-</selector>
+<resources></resources>
